--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/3_2_logging_models.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/3_2_logging_models.ipynb
@@ -99,7 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,10 +131,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "In a typical scenario, you create a model object, you train it and only then you save it as an artifact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 12:19:28 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 12:19:28 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -126,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +184,527 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "sepal length (cm)",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "sepal width (cm)",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "petal length (cm)",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "petal width (cm)",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "32792c34-0e22-4574-8865-d54ee80e1f29",
+       "rows": [
+        [
+         "0",
+         "5.1",
+         "3.5",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "1",
+         "4.9",
+         "3.0",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "2",
+         "4.7",
+         "3.2",
+         "1.3",
+         "0.2"
+        ],
+        [
+         "3",
+         "4.6",
+         "3.1",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "4",
+         "5.0",
+         "3.6",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "5",
+         "5.4",
+         "3.9",
+         "1.7",
+         "0.4"
+        ],
+        [
+         "6",
+         "4.6",
+         "3.4",
+         "1.4",
+         "0.3"
+        ],
+        [
+         "7",
+         "5.0",
+         "3.4",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "8",
+         "4.4",
+         "2.9",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "9",
+         "4.9",
+         "3.1",
+         "1.5",
+         "0.1"
+        ],
+        [
+         "10",
+         "5.4",
+         "3.7",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "11",
+         "4.8",
+         "3.4",
+         "1.6",
+         "0.2"
+        ],
+        [
+         "12",
+         "4.8",
+         "3.0",
+         "1.4",
+         "0.1"
+        ],
+        [
+         "13",
+         "4.3",
+         "3.0",
+         "1.1",
+         "0.1"
+        ],
+        [
+         "14",
+         "5.8",
+         "4.0",
+         "1.2",
+         "0.2"
+        ],
+        [
+         "15",
+         "5.7",
+         "4.4",
+         "1.5",
+         "0.4"
+        ],
+        [
+         "16",
+         "5.4",
+         "3.9",
+         "1.3",
+         "0.4"
+        ],
+        [
+         "17",
+         "5.1",
+         "3.5",
+         "1.4",
+         "0.3"
+        ],
+        [
+         "18",
+         "5.7",
+         "3.8",
+         "1.7",
+         "0.3"
+        ],
+        [
+         "19",
+         "5.1",
+         "3.8",
+         "1.5",
+         "0.3"
+        ],
+        [
+         "20",
+         "5.4",
+         "3.4",
+         "1.7",
+         "0.2"
+        ],
+        [
+         "21",
+         "5.1",
+         "3.7",
+         "1.5",
+         "0.4"
+        ],
+        [
+         "22",
+         "4.6",
+         "3.6",
+         "1.0",
+         "0.2"
+        ],
+        [
+         "23",
+         "5.1",
+         "3.3",
+         "1.7",
+         "0.5"
+        ],
+        [
+         "24",
+         "4.8",
+         "3.4",
+         "1.9",
+         "0.2"
+        ],
+        [
+         "25",
+         "5.0",
+         "3.0",
+         "1.6",
+         "0.2"
+        ],
+        [
+         "26",
+         "5.0",
+         "3.4",
+         "1.6",
+         "0.4"
+        ],
+        [
+         "27",
+         "5.2",
+         "3.5",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "28",
+         "5.2",
+         "3.4",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "29",
+         "4.7",
+         "3.2",
+         "1.6",
+         "0.2"
+        ],
+        [
+         "30",
+         "4.8",
+         "3.1",
+         "1.6",
+         "0.2"
+        ],
+        [
+         "31",
+         "5.4",
+         "3.4",
+         "1.5",
+         "0.4"
+        ],
+        [
+         "32",
+         "5.2",
+         "4.1",
+         "1.5",
+         "0.1"
+        ],
+        [
+         "33",
+         "5.5",
+         "4.2",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "34",
+         "4.9",
+         "3.1",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "35",
+         "5.0",
+         "3.2",
+         "1.2",
+         "0.2"
+        ],
+        [
+         "36",
+         "5.5",
+         "3.5",
+         "1.3",
+         "0.2"
+        ],
+        [
+         "37",
+         "4.9",
+         "3.6",
+         "1.4",
+         "0.1"
+        ],
+        [
+         "38",
+         "4.4",
+         "3.0",
+         "1.3",
+         "0.2"
+        ],
+        [
+         "39",
+         "5.1",
+         "3.4",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "40",
+         "5.0",
+         "3.5",
+         "1.3",
+         "0.3"
+        ],
+        [
+         "41",
+         "4.5",
+         "2.3",
+         "1.3",
+         "0.3"
+        ],
+        [
+         "42",
+         "4.4",
+         "3.2",
+         "1.3",
+         "0.2"
+        ],
+        [
+         "43",
+         "5.0",
+         "3.5",
+         "1.6",
+         "0.6"
+        ],
+        [
+         "44",
+         "5.1",
+         "3.8",
+         "1.9",
+         "0.4"
+        ],
+        [
+         "45",
+         "4.8",
+         "3.0",
+         "1.4",
+         "0.3"
+        ],
+        [
+         "46",
+         "5.1",
+         "3.8",
+         "1.6",
+         "0.2"
+        ],
+        [
+         "47",
+         "4.6",
+         "3.2",
+         "1.4",
+         "0.2"
+        ],
+        [
+         "48",
+         "5.3",
+         "3.7",
+         "1.5",
+         "0.2"
+        ],
+        [
+         "49",
+         "5.0",
+         "3.3",
+         "1.4",
+         "0.2"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 150
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                  5.1               3.5                1.4               0.2\n",
+       "1                  4.9               3.0                1.4               0.2\n",
+       "2                  4.7               3.2                1.3               0.2\n",
+       "3                  4.6               3.1                1.5               0.2\n",
+       "4                  5.0               3.6                1.4               0.2\n",
+       "..                 ...               ...                ...               ...\n",
+       "145                6.7               3.0                5.2               2.3\n",
+       "146                6.3               2.5                5.0               1.9\n",
+       "147                6.5               3.0                5.2               2.0\n",
+       "148                6.2               3.4                5.4               2.3\n",
+       "149                5.9               3.0                5.1               1.8\n",
+       "\n",
+       "[150 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
@@ -164,9 +718,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0                5.1               3.5                1.4               0.2\n",
+      "1                4.9               3.0                1.4               0.2\n",
+      "2                4.7               3.2                1.3               0.2\n",
+      "3                4.6               3.1                1.5               0.2\n",
+      "4                5.0               3.6                1.4               0.2\n",
+      "5                5.4               3.9                1.7               0.4\n",
+      "6                4.6               3.4                1.4               0.3\n",
+      "7                5.0               3.4                1.5               0.2\n",
+      "8                4.4               2.9                1.4               0.2\n",
+      "9                4.9               3.1                1.5               0.1\n"
+     ]
+    }
+   ],
    "source": [
     "# get a sample input\n",
     "input_example = x.iloc[0:10]\n",
@@ -177,7 +749,109 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 12:30:15 WARNING mlflow.models.signature: Failed to infer the model signature from the input example. Reason: NotFittedError(\"This RandomForestClassifier instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator.\"). To see the full traceback, set the logging level to DEBUG via `logging.getLogger(\"mlflow\").setLevel(logging.DEBUG)`.\n",
+      "2025/12/04 12:30:20 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35c767d9353d40a0af81455b2b337150",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 12:30:21 WARNING mlflow.models.model: Failed to validate serving input example {\n",
+      "  \"dataframe_split\": {\n",
+      "    \"columns\": [\n",
+      "      \"sepal length (cm)\",\n",
+      "      \"sepal width (cm)\",\n",
+      "      \"petal length (cm)\",\n",
+      "      \"petal width (cm)\"\n",
+      "    ],\n",
+      "    \"data\": [\n",
+      "      [\n",
+      "        5.1,\n",
+      "        3.5,\n",
+      "        1.4,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        4.9,\n",
+      "        3.0,\n",
+      "        1.4,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        4.7,\n",
+      "        3.2,\n",
+      "        1.3,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        4.6,\n",
+      "        3.1,\n",
+      "        1.5,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        5.0,\n",
+      "        3.6,\n",
+      "        1.4,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        5.4,\n",
+      "        3.9,\n",
+      "        1.7,\n",
+      "        0.4\n",
+      "      ],\n",
+      "      [\n",
+      "        4.6,\n",
+      "        3.4,\n",
+      "        1.4,\n",
+      "        0.3\n",
+      "      ],\n",
+      "      [\n",
+      "        5.0,\n",
+      "        3.4,\n",
+      "        1.5,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        4.4,\n",
+      "        2.9,\n",
+      "        1.4,\n",
+      "        0.2\n",
+      "      ],\n",
+      "      [\n",
+      "        4.9,\n",
+      "        3.1,\n",
+      "        1.5,\n",
+      "        0.1\n",
+      "      ]\n",
+      "    ]\n",
+      "  }\n",
+      "}. Alternatively, you can avoid passing input example and pass model signature instead when logging the model. To ensure the input example is valid prior to serving, please try calling `mlflow.models.validate_serving_input` on the model uri and serving input example. A serving input example can be generated from model input example using `mlflow.models.convert_input_example_to_serving_input` function.\n",
+      "Got error: This RandomForestClassifier instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator.\n"
+     ]
+    }
+   ],
    "source": [
     "rfc = RandomForestClassifier()\n",
     "\n",
@@ -185,7 +859,7 @@
     "    # Log the model\n",
     "    mlflow.sklearn.log_model(\n",
     "        sk_model = rfc,\n",
-    "        artifact_path = rfc.__class__.__name__,\n",
+    "        artifact_path = rfc.__class__.__name__, # RandomForestClassifier\n",
     "        input_example = input_example\n",
     "    )"
    ]
@@ -214,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
